--- a/frontend/login.html
+++ b/frontend/login.html
@@ -22,7 +22,6 @@
             --focus-ring: rgba(30, 58, 138, 0.15);
         }
 
-        /* --- THE FIX: REMOVE BROWSER DEFAULT EYE ICON --- */
         input[type="password"]::-ms-reveal,
         input[type="password"]::-ms-clear {
             display: none;
@@ -31,7 +30,6 @@
             display: none;
             -webkit-appearance: none;
         }
-        /* ----------------------------------------------- */
 
         body {
             background: var(--brand-gradient);
@@ -46,7 +44,6 @@
             padding: 20px;
         }
 
-        /* Logo outside the card */
         .brand-logo {
             font-family: 'Dancing Script', cursive;
             font-size: 3.5em;
@@ -92,7 +89,6 @@
             font-weight: 600;
         }
 
-        /* Professional Input Wrapper */
         .input-wrapper {
             position: relative;
             display: flex;
@@ -102,7 +98,6 @@
         input[type="email"], input[type="password"] {
             width: 100%;
             padding: 12px 16px;
-            /* Extra padding on right for password eye */
             padding-right: 45px; 
             border: 1px solid var(--input-border);
             border-radius: 8px;
@@ -120,7 +115,6 @@
             box-shadow: 0 0 0 4px var(--focus-ring);
         }
 
-        /* Eye Icon Style */
         .toggle-password {
             position: absolute;
             right: 12px;
@@ -139,7 +133,6 @@
         .toggle-password:hover { color: var(--brand-blue); }
         .toggle-password svg { width: 20px; height: 20px; }
 
-        /* Login Specific: Options Row (Remember me / Forgot Password) */
         .options {
             display: flex;
             justify-content: space-between;
@@ -199,6 +192,21 @@
 
         a { color: var(--brand-blue); text-decoration: none; font-weight: 600; }
         a:hover { text-decoration: underline; }
+
+        .message {
+            margin-top: 15px;
+            padding: 10px;
+            border-radius: 8px;
+            text-align: center;
+        }
+        .success {
+            background-color: #dcfce7;
+            color: #166534;
+        }
+        .error {
+            background-color: #fef2f2;
+            color: #dc2626;
+        }
     </style>
 </head>
 <body>
@@ -209,7 +217,7 @@
         <h2>Welcome Back</h2>
         <p class="subtitle">Enter your details to sign in.</p>
         
-        <form action="/api/login" method="POST">
+        <form id="loginForm">
             <div class="form-group">
                 <label for="email">Email Address</label>
                 <div class="input-wrapper">
@@ -240,6 +248,8 @@
             <button type="submit" class="login-btn">Sign In</button>
         </form>
 
+        <div id="message"></div>
+
         <div class="footer-text">
             Don't have an account? 
             <a href="register.html">Create Account</a>
@@ -255,13 +265,53 @@
             input.setAttribute('type', type);
 
             if (type === 'text') {
-                // Eye Slash (Hidden)
-                iconSvg.innerHTML = '<path stroke-linecap="round" stroke-linejoin="round" d="M3.98 8.223A10.477 10.477 0 0 0 1.934 12C3.226 16.338 7.244 19.5 12 19.5c.993 0 1.953-.138 2.863-.395M6.228 6.228A10.451 10.451 0 0 1 12 4.5c4.756 0 8.773 3.162 10.065 7.498a10.522 10.522 0 0 1-4.293 5.774M6.228 6.228 3 3m3.228 3.228 3.65 3.65m7.894 7.894L21 21m-3.228-3.228-3.65-3.65m0 0a3 3 0 1 0-4.243-4.243m4.242 4.242L9.88 9.88" />';
+                iconSvg.innerHTML = '<path stroke-linecap="round" stroke-linejoin="round" d="M3.98 8.223A10.477 10.477 0 0 0 1.934 12C3.226 16.338 7.244 19.5 12 19.5c.993 0 1.953-.138 2.863-.395M6.228 6.228A10.451 10.451 0 0 1 12 4.5c4.756 0 8.773 3.162 10.065 7.498a10.522 10.522 0 0 1-4.293 5.774M6.228 6.228 3 3m3.228 3.228 3.65 3.65m7.894 7.894L21 21m-3.228-3.228-3.65-3.65m0 0a3 3 0 1 1-4.243-4.243m4.242 4.242L9.88 9.88" />';
             } else {
-                // Eye Open (Visible)
                 iconSvg.innerHTML = '<path stroke-linecap="round" stroke-linejoin="round" d="M2.036 12.322a1.012 1.012 0 0 1 0-.639C3.423 7.51 7.36 4.5 12 4.5c4.638 0 8.573 3.007 9.963 7.178.07.207.07.431 0 .639C20.577 16.49 16.64 19.5 12 19.5c-4.638 0-8.573-3.007-9.963-7.178Z" /><path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />';
             }
         }
+
+        document.getElementById('loginForm').addEventListener('submit', async (e) => {
+            e.preventDefault();
+            
+            const formData = new FormData(e.target);
+            const loginData = {
+                email: formData.get('email'),
+                password: formData.get('password')
+            };
+
+            const messageDiv = document.getElementById('message');
+
+            try {
+                const response = await fetch('http://localhost:5000/api/login', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify(loginData)
+                });
+
+                const result = await response.json();
+
+                if (response.ok) {
+                    messageDiv.innerHTML = `<div class="success">Login successful! Welcome back, ${result.user.name}!</div>`;
+                    localStorage.setItem('user', JSON.stringify(result.user));
+                } else {
+                    // Show specific error messages
+                    if (response.status === 401) {
+                        messageDiv.innerHTML = '<div class="error">❌ Invalid email or password. Please check your credentials and try again.</div>';
+                    } else if (response.status === 400) {
+                        messageDiv.innerHTML = '<div class="error">❌ Please fill in all required fields correctly.</div>';
+                    } else if (response.status === 500) {
+                        messageDiv.innerHTML = '<div class="error">❌ Server error. Please try again later.</div>';
+                    } else {
+                        messageDiv.innerHTML = `<div class="error">❌ ${result.error || 'Login failed. Please try again.'}</div>`;
+                    }
+                }
+            } catch (error) {
+                messageDiv.innerHTML = '<div class="error">❌ Connection error. Please check if the server is running and try again.</div>';
+            }
+        });
     </script>
 
 </body>
