--- a/frontend/register.html
+++ b/frontend/register.html
@@ -22,7 +22,6 @@
             --focus-ring: rgba(30, 58, 138, 0.15);
         }
 
-        /* --- THE FIX: REMOVE BROWSER DEFAULT EYE ICON --- */
         input[type="password"]::-ms-reveal,
         input[type="password"]::-ms-clear {
             display: none;
@@ -31,7 +30,6 @@
             display: none;
             -webkit-appearance: none;
         }
-        /* ----------------------------------------------- */
 
         body {
             background: var(--brand-gradient);
@@ -91,7 +89,6 @@
             font-weight: 600;
         }
 
-        /* PROFESSIONAL INPUT GROUP HANDLING */
         .input-wrapper {
             position: relative;
             display: flex;
@@ -101,7 +98,7 @@
         input {
             width: 100%;
             padding: 12px 16px;
-            padding-right: 45px; /* Space for the icon */
+            padding-right: 45px;
             border: 1px solid var(--input-border);
             border-radius: 8px;
             font-size: 15px;
@@ -118,7 +115,6 @@
             box-shadow: 0 0 0 4px var(--focus-ring);
         }
 
-        /* The Eye Icon Button */
         .toggle-password {
             position: absolute;
             right: 12px;
@@ -135,7 +131,6 @@
         }
 
         .toggle-password:hover { color: var(--brand-blue); }
-
         .toggle-password svg { width: 20px; height: 20px; }
 
         button.register-btn {
@@ -188,6 +183,21 @@
 
         a { color: var(--brand-blue); text-decoration: none; font-weight: 600; }
         a:hover { text-decoration: underline; }
+
+        .message {
+            margin-top: 15px;
+            padding: 10px;
+            border-radius: 8px;
+            text-align: center;
+        }
+        .success {
+            background-color: #dcfce7;
+            color: #166534;
+        }
+        .error {
+            background-color: #fef2f2;
+            color: #dc2626;
+        }
     </style>
 </head>
 <body>
@@ -198,11 +208,11 @@
         <h2>Create Account</h2>
         <p class="subtitle">Where games become memories.</p>
         
-        <form action="/api/register" method="POST">
+        <form id="registerForm">
             <div class="form-group">
                 <label for="fullname">Full Name</label>
                 <div class="input-wrapper">
-                    <input type="text" id="fullname" name="fullname" placeholder="John Doe" required autocomplete="name">
+                    <input type="text" id="fullname" name="name" placeholder="John Doe" required autocomplete="name">
                 </div>
             </div>
 
@@ -210,6 +220,13 @@
                 <label for="email">Email Address</label>
                 <div class="input-wrapper">
                     <input type="email" id="email" name="email" placeholder="name@company.com" required autocomplete="email">
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label for="phone">Phone Number</label>
+                <div class="input-wrapper">
+                    <input type="tel" id="phone" name="phone" placeholder="1234567890" required>
                 </div>
             </div>
 
@@ -226,19 +243,6 @@
                 </div>
             </div>
 
-            <div class="form-group">
-                <label for="confirm_password">Confirm Password</label>
-                <div class="input-wrapper">
-                    <input type="password" id="confirm_password" name="confirm_password" placeholder="Re-enter password" required autocomplete="new-password">
-                    <button type="button" class="toggle-password" onclick="toggleInput('confirm_password', this)" aria-label="Toggle Password Visibility">
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="M2.036 12.322a1.012 1.012 0 0 1 0-.639C3.423 7.51 7.36 4.5 12 4.5c4.638 0 8.573 3.007 9.963 7.178.07.207.07.431 0 .639C20.577 16.49 16.64 19.5 12 19.5c-4.638 0-8.573-3.007-9.963-7.178Z" />
-                            <path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
-                        </svg>
-                    </button>
-                </div>
-            </div>
-
             <div class="checkbox-wrapper">
                 <input type="checkbox" required> 
                 <span>I agree to the <a href="#">Terms & Conditions</a></span>
@@ -246,6 +250,8 @@
 
             <button type="submit" class="register-btn">Register</button>
         </form>
+
+        <div id="message"></div>
 
         <div class="footer-text">
             Already have an account? <a href="login.html">Log In</a>
@@ -261,13 +267,45 @@
             input.setAttribute('type', type);
 
             if (type === 'text') {
-                // Eye Slash (Hidden)
-                iconSvg.innerHTML = '<path stroke-linecap="round" stroke-linejoin="round" d="M3.98 8.223A10.477 10.477 0 0 0 1.934 12C3.226 16.338 7.244 19.5 12 19.5c.993 0 1.953-.138 2.863-.395M6.228 6.228A10.451 10.451 0 0 1 12 4.5c4.756 0 8.773 3.162 10.065 7.498a10.522 10.522 0 0 1-4.293 5.774M6.228 6.228 3 3m3.228 3.228 3.65 3.65m7.894 7.894L21 21m-3.228-3.228-3.65-3.65m0 0a3 3 0 1 0-4.243-4.243m4.242 4.242L9.88 9.88" />';
+                iconSvg.innerHTML = '<path stroke-linecap="round" stroke-linejoin="round" d="M3.98 8.223A10.477 10.477 0 0 0 1.934 12C3.226 16.338 7.244 19.5 12 19.5c.993 0 1.953-.138 2.863-.395M6.228 6.228A10.451 10.451 0 0 1 12 4.5c4.756 0 8.773 3.162 10.065 7.498a10.522 10.522 0 0 1-4.293 5.774M6.228 6.228 3 3m3.228 3.228 3.65 3.65m7.894 7.894L21 21m-3.228-3.228-3.65-3.65m0 0a3 3 0 1 1-4.243-4.243m4.242 4.242L9.88 9.88" />';
             } else {
-                // Eye Open (Visible)
                 iconSvg.innerHTML = '<path stroke-linecap="round" stroke-linejoin="round" d="M2.036 12.322a1.012 1.012 0 0 1 0-.639C3.423 7.51 7.36 4.5 12 4.5c4.638 0 8.573 3.007 9.963 7.178.07.207.07.431 0 .639C20.577 16.49 16.64 19.5 12 19.5c-4.638 0-8.573-3.007-9.963-7.178Z" /><path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />';
             }
         }
+
+        document.getElementById('registerForm').addEventListener('submit', async (e) => {
+            e.preventDefault();
+            
+            const formData = new FormData(e.target);
+            const userData = {
+                name: formData.get('name'),
+                email: formData.get('email'),
+                phone: formData.get('phone'),
+                password: formData.get('password')
+            };
+
+            try {
+                const response = await fetch('http://localhost:5000/api/register', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify(userData)
+                });
+
+                const result = await response.json();
+                const messageDiv = document.getElementById('message');
+
+                if (response.ok) {
+                    messageDiv.innerHTML = '<div class="success">Registration successful!</div>';
+                    e.target.reset();
+                } else {
+                    messageDiv.innerHTML = `<div class="error">${result.error}</div>`;
+                }
+            } catch (error) {
+                document.getElementById('message').innerHTML = '<div class="error">Connection error. Please try again.</div>';
+            }
+        });
     </script>
 
 </body>
