added user data

--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -235,6 +235,7 @@
             <div class="brand-logo-small">Joy Juncture</div>
             <div class="nav-links">
                 <span>Dashboard</span>
+                <span onclick="window.location.href='user_data.html'">User Data</span>
                 <span>Settings</span>
                 <span>Log Out</span>
             </div>
